--- a/libs/maket_ip.ui
+++ b/libs/maket_ip.ui
@@ -7,19 +7,19 @@
     <x>0</x>
     <y>0</y>
     <width>510</width>
-    <height>601</height>
+    <height>580</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
     <width>510</width>
-    <height>601</height>
+    <height>580</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
     <width>510</width>
-    <height>601</height>
+    <height>580</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -37,13 +37,13 @@
      <x>10</x>
      <y>10</y>
      <width>491</width>
-     <height>181</height>
+     <height>141</height>
     </rect>
    </property>
    <property name="title">
     <string>Настройки подключения</string>
    </property>
-   <widget class="QLineEdit" name="speed">
+   <widget class="QLineEdit" name="ip">
     <property name="geometry">
      <rect>
       <x>10</x>
@@ -65,39 +65,14 @@
      <bool>false</bool>
     </property>
     <property name="placeholderText">
-     <string>Введите скорость подключения</string>
-    </property>
-   </widget>
-   <widget class="QLineEdit" name="com">
-    <property name="geometry">
-     <rect>
-      <x>10</x>
-      <y>60</y>
-      <width>471</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-    <property name="alignment">
-     <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
-    </property>
-    <property name="dragEnabled">
-     <bool>false</bool>
-    </property>
-    <property name="readOnly">
-     <bool>false</bool>
-    </property>
-    <property name="placeholderText">
-     <string>Введите ком порт</string>
+     <string>Введите ip</string>
     </property>
    </widget>
    <widget class="QLineEdit" name="serial">
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>100</y>
+      <y>60</y>
       <width>471</width>
       <height>31</height>
      </rect>
@@ -122,7 +97,7 @@
     <property name="geometry">
      <rect>
       <x>190</x>
-      <y>140</y>
+      <y>100</y>
       <width>291</width>
       <height>31</height>
      </rect>
@@ -147,7 +122,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>140</y>
+      <y>100</y>
       <width>161</width>
       <height>31</height>
      </rect>
@@ -161,7 +136,7 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>200</y>
+     <y>160</y>
      <width>491</width>
      <height>121</height>
     </rect>
@@ -296,7 +271,7 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>330</y>
+     <y>290</y>
      <width>471</width>
      <height>31</height>
     </rect>
@@ -309,7 +284,7 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>370</y>
+     <y>330</y>
      <width>471</width>
      <height>31</height>
     </rect>
@@ -322,9 +297,9 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>410</y>
+     <y>370</y>
      <width>471</width>
-     <height>181</height>
+     <height>201</height>
     </rect>
    </property>
   </widget>
