--- a/libs/maket_mass.ui
+++ b/libs/maket_mass.ui
@@ -6,20 +6,20 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>510</width>
-    <height>620</height>
+    <width>550</width>
+    <height>452</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
     <width>510</width>
-    <height>580</height>
+    <height>400</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
-    <width>510</width>
-    <height>620</height>
+    <width>550</width>
+    <height>400000</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -36,8 +36,8 @@
     <rect>
      <x>10</x>
      <y>10</y>
-     <width>491</width>
-     <height>191</height>
+     <width>531</width>
+     <height>141</height>
     </rect>
    </property>
    <property name="title">
@@ -46,14 +46,17 @@
    <widget class="QLineEdit" name="com">
     <property name="geometry">
      <rect>
-      <x>10</x>
+      <x>160</x>
       <y>20</y>
-      <width>471</width>
+      <width>361</width>
       <height>31</height>
      </rect>
     </property>
     <property name="text">
      <string/>
+    </property>
+    <property name="maxLength">
+     <number>2</number>
     </property>
     <property name="alignment">
      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
@@ -71,14 +74,17 @@
    <widget class="QLineEdit" name="serial">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>100</y>
-      <width>471</width>
+      <x>160</x>
+      <y>60</y>
+      <width>361</width>
       <height>31</height>
      </rect>
     </property>
     <property name="text">
      <string/>
+    </property>
+    <property name="maxLength">
+     <number>4000000</number>
     </property>
     <property name="alignment">
      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
@@ -90,20 +96,23 @@
      <bool>false</bool>
     </property>
     <property name="placeholderText">
-     <string>Введите серийный номер</string>
+     <string>Введите все серийники (4 цифры) через запятую</string>
     </property>
    </widget>
    <widget class="QLineEdit" name="field_password">
     <property name="geometry">
      <rect>
-      <x>190</x>
-      <y>140</y>
-      <width>291</width>
+      <x>160</x>
+      <y>100</y>
+      <width>361</width>
       <height>31</height>
      </rect>
     </property>
     <property name="text">
      <string/>
+    </property>
+    <property name="maxLength">
+     <number>16</number>
     </property>
     <property name="alignment">
      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
@@ -122,148 +131,51 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>140</y>
-      <width>161</width>
+      <y>100</y>
+      <width>141</width>
       <height>31</height>
      </rect>
+    </property>
+    <property name="layoutDirection">
+     <enum>Qt::RightToLeft</enum>
+    </property>
+    <property name="autoFillBackground">
+     <bool>false</bool>
     </property>
     <property name="text">
      <string>Пароль не дефолтный</string>
     </property>
    </widget>
-  </widget>
-  <widget class="QGroupBox" name="groupBox_2">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>200</y>
-     <width>491</width>
-     <height>121</height>
-    </rect>
-   </property>
-   <property name="title">
-    <string>Настройки считывания</string>
-   </property>
-   <widget class="QCheckBox" name="temperature">
-    <property name="geometry">
-     <rect>
-      <x>20</x>
-      <y>20</y>
-      <width>341</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Включить считывание журнала температуры</string>
-    </property>
-   </widget>
-   <widget class="QCheckBox" name="viborka">
-    <property name="geometry">
-     <rect>
-      <x>20</x>
-      <y>50</y>
-      <width>321</width>
-      <height>21</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Включить выборку</string>
-    </property>
-   </widget>
-   <widget class="QDateTimeEdit" name="end_date">
+   <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>80</y>
-      <width>231</width>
+      <y>20</y>
+      <width>111</width>
       <height>31</height>
      </rect>
     </property>
-    <property name="buttonSymbols">
-     <enum>QAbstractSpinBox::UpDownArrows</enum>
-    </property>
-    <property name="date">
-     <date>
-      <year>2022</year>
-      <month>1</month>
-      <day>1</day>
-     </date>
-    </property>
-    <property name="maximumDate">
-     <date>
-      <year>2050</year>
-      <month>12</month>
-      <day>31</day>
-     </date>
-    </property>
-    <property name="minimumDate">
-     <date>
-      <year>2020</year>
-      <month>1</month>
-      <day>1</day>
-     </date>
-    </property>
-    <property name="displayFormat">
-     <string>dd.MM.yyyy</string>
-    </property>
-    <property name="calendarPopup">
-     <bool>true</bool>
-    </property>
-   </widget>
-   <widget class="QDateTimeEdit" name="start_date">
-    <property name="geometry">
-     <rect>
-      <x>250</x>
-      <y>80</y>
-      <width>231</width>
-      <height>31</height>
-     </rect>
-    </property>
-    <property name="frame">
-     <bool>true</bool>
+    <property name="text">
+     <string>Номер COM порта:</string>
     </property>
     <property name="alignment">
-     <set>Qt::AlignCenter</set>
+     <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
     </property>
-    <property name="readOnly">
-     <bool>false</bool>
+   </widget>
+   <widget class="QLabel" name="label_2">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>60</y>
+      <width>111</width>
+      <height>31</height>
+     </rect>
     </property>
-    <property name="date">
-     <date>
-      <year>2022</year>
-      <month>1</month>
-      <day>1</day>
-     </date>
+    <property name="text">
+     <string>Серийный номер:</string>
     </property>
-    <property name="minimumDateTime">
-     <datetime>
-      <hour>0</hour>
-      <minute>0</minute>
-      <second>0</second>
-      <year>2020</year>
-      <month>1</month>
-      <day>1</day>
-     </datetime>
-    </property>
-    <property name="maximumDate">
-     <date>
-      <year>2050</year>
-      <month>12</month>
-      <day>31</day>
-     </date>
-    </property>
-    <property name="minimumDate">
-     <date>
-      <year>2020</year>
-      <month>1</month>
-      <day>1</day>
-     </date>
-    </property>
-    <property name="displayFormat">
-     <string>dd.MM.yyyy</string>
-    </property>
-    <property name="calendarPopup">
-     <bool>true</bool>
+    <property name="alignment">
+     <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
     </property>
    </widget>
   </widget>
@@ -271,8 +183,8 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>330</y>
-     <width>471</width>
+     <y>160</y>
+     <width>511</width>
      <height>31</height>
     </rect>
    </property>
@@ -280,26 +192,13 @@
     <string>Считать журналы</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="analisys">
-   <property name="geometry">
-    <rect>
-     <x>20</x>
-     <y>370</y>
-     <width>471</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Анализировать журналы</string>
-   </property>
-  </widget>
   <widget class="QTextEdit" name="textEdit">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>410</y>
-     <width>471</width>
-     <height>201</height>
+     <x>10</x>
+     <y>200</y>
+     <width>531</width>
+     <height>241</height>
     </rect>
    </property>
   </widget>
